--- a/exampleSite/config/_default/params.toml
+++ b/exampleSite/config/_default/params.toml
@@ -1,5 +1,5 @@
 navbar_title = 'Monochrome'
-footer = "Copyright © 2021-2023 by kaiiiz"
+footer = "This is a test"
 author = "kaiiiz"
 color_scheme = "light"
 
